<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Ble Sample Omron</string>
    <string name="version_label" translatable="false">%1$s</string>
    <string name="unknown_version" translatable="false">unknown</string>
    <string name="rssi_unit" translatable="false">dBm</string>
    <string name="yes" translatable="false">YES</string>
    <string name="no" translatable="false">NO</string>
    <string name="time" translatable="false">time</string>
    <string name="userInfo" translatable="false">userInfo</string>
    <string name="hyphen" translatable="false">-</string>
    <string name="blank" translatable="false">" "</string>
    <string name="detected_devices">Detected Devices</string>
    <string name="device_detail">Device Detail</string>
    <string name="receive_measurements">Receive Measurements</string>
    <string name="guest_mode">Guest Mode</string>
    <string name="i_beacon">iBeacon</string>
    <string name="show_known_beacons">Show Known Beacons</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="measurement_size">%1$d data</string>
    <string name="show_log">Show Log</string>
    <string name="show_settings">Show Settings</string>
    <string name="result">Result</string>
    <string name="measurementsJson">Measurements</string>
    <string name="data_size">%1$d data</string>
    <string name="consent_code">Consent Code</string>
    <string name="database_changed">Database Changed</string>
    <string name="unit_mm_hg">mmHg</string>
    <string name="unit_bpm">bpm</string>
    <string name="weight">Weight</string>
    <string name="unit_kg">kg</string>
    <string name="unit_percent">%</string>
    <string name="body_fat">Body Fat</string>
    <string name="select_option">Select option</string>
    <string name="select_profile">Select the Profile to Use</string>
    <string name="close">Close</string>
    <string name="number">No.</string>
    <string name="type">Type</string>
    <string name="device_name">Device Name</string>
    <string name="status">Status</string>
    <string name="connectivity">Connectivity</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="connection_parameters">Connection Parameters</string>
    <string name="communication_parameters">Communication Parameters</string>
    <string name="disconnection_parameters">Disconnection Parameters</string>
    <string name="advertisement_data">Advertisement Data</string>
    <string name="show_advertisement_data">Show Advertisement Data</string>
    <string name="show_device_settings">Show Device Settings</string>
    <string name="discover_devices">AVAILABLE DEVICES</string>

    <string name="contentDescription">Image View</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="user_1_name">User A</string>
    <string name="user_2_name">User B</string>
    <string name="user_3_name">User C</string>
    <string name="user_4_name">User D</string>
    <string name="guest_name">Guest</string>

    <string name="height_label" translatable="false">%1$s cm</string>

    <string name="home">HOME</string>
    <string name="users_menu">USERS MENU</string>
    <string name="history">HISTORY</string>
    <string name="settings">SETTINGS</string>
    <string name="log">LOG</string>
    <string name="scanner">SCANNER</string>
    <string name="profile">PROFILE</string>
    <string name="select_user">SELECT USER</string>
    <string name="registration_options">Registration Options</string>

    <string name="date_of_birth">Date Of Birth</string>
    <string name="height">Height</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="blood_pressure_monitor">Blood Pressure Monitor</string>
    <string name="weight_scale">Weight Scale</string>
    <string name="body_composition_monitor">Body Composition Monitor</string>
    <string name="weight_or_body_composition_monitor">Weight or Body Composition Monitor</string>
    <string name="no_filter">No Filter</string>

    <string name="non_filter">All</string>
    <string name="weight_and_body_composition_monitor">Weight and Body Composition Monitor</string>

    <string name="devices">Devices</string>
    <string name="protocol">Protocol</string>
    <string name="bluetooth_standard">Bluetooth Standard</string>
    <string name="omron_extension">Omron Extension</string>
    <string name="user_index">User Index</string>
    <string name="user_index_auto">Auto</string>
    <string name="user_index_1">1</string>
    <string name="user_index_2">2</string>
    <string name="user_index_3">3</string>
    <string name="user_index_4">4</string>

    <string name="start_registration">Start Registration</string>

    <string name="device_information">Device Information</string>
    <string name="address">Address</string>
    <string name="local_name">Local Name</string>
    <string name="model_name">Model Name</string>
    <string name="registration_information">Registration Information</string>
    <string name="user_information">User Information</string>
    <string name="last_sequence_number">Last Sequence Number</string>

    <string name="progress">Progress</string>
    <string name="delete">Delete</string>
    <string name="select_filter">Select Filter</string>
    <string name="export">Export</string>

    <string name="transfer_message">Do you want to start data transfer.</string>
    <string name="delete_device_message">Would you unregister the device.</string>
    <string name="delete_history_message">Would you delete history.</string>
    <string name="delete_user_message">Delete User from Device</string>
    <string name="forget_device_message">Forget Device</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="mean_arterial_pressure">Mean Arterial Pressure</string>
    <string name="time_stamp">Time Stamp</string>
    <string name="pulse_rate">Pulse Rate</string>
    <string name="user">User</string>

    <string name="scan">SCAN</string>
    <string name="scanning">Scanning&#8230;</string>
    <string name="pairing_mode_require">Please put the device in pairing mode.</string>
    <string name="bluetooth_invalid_message">Please turn on Bluetooth.</string>

    <string name="equipment_failure">Equipment failure</string>
    <string name="date">Date</string>

    <string name="guest_select_device">Tap to select the device</string>
    <string name="guest_change_normal_mode">Change the device to normal mode</string>
    <string name="guest_change_unregistered_user_mode">Change the device to unregistered user mode</string>
    <string name="guest_receive_measurement_records">Receive measurement records</string>
    <string name="guest_receive_summary">Receive Guest User\'s Measurements with specified profile</string>

    <string name="create_bond_option">Create Bond Option</string>
    <string name="create_bond_before_catt_connection">Used Before gatt connection</string>
    <string name="create_bond_after_services_discovered">Used After services discovered</string>
    <string name="create_bond_not_use">Not Use</string>
    <string name="remove_bond_option">Remove Bond Option</string>
    <string name="remove_bond_use">Used before connection process every time</string>
    <string name="remove_bond_not_use">Not Use</string>
    <string name="assist_pairing_dialog">Assist Pairing Dialog</string>
    <string name="auto_pairing">Auto Pairing</string>
    <string name="auto_enter_the_pin_code">Auto Enter the Pin Code</string>
    <string name="pin_code">Pin Code</string>
    <string name="stable_connection">Stable Connection</string>
    <string name="stable_connection_wait_time">Stable Connection Wait Time</string>
    <string name="connection_retry">Connection Retry</string>
    <string name="connection_retry_delay_time">Connection Retry Delay Time</string>
    <string name="connection_retry_count">Connection Retry Count</string>
    <string name="refresh_use">Refresh at the end of session</string>

    <string name="assist_pairing_dialog_summary">Show pairing request dialog to foreground when pairing is needed.</string>
    <string name="auto_pairing_summary">Automatic pairing without user\'s confirmation.The pairing request dialog is not displayed.</string>
    <string name="auto_enter_the_pin_code_summary">Automatic pairing with PIN code defined in [PIN code]. The PIN input dialog is not displayed.</string>
    <string name="pin_code_summary">Please input PIN code for pairing.</string>
    <string name="stable_connection_summary">Wait completion of connection during defined time in [Stable Connection Wait Time] for unexpected GATT disconnection immediately after GATT connection.</string>
    <string name="stable_connection_wait_time_summary">Wait time for completion of connection after GATT connection.</string>
    <string name="connection_retry_summary">Wait time for retry defined as [Connection Retry Delay Time] when connection failure.</string>
    <string name="connection_retry_delay_time_summary">Wait time for retry of connection.</string>
    <string name="connection_retry_count_summary">Retry count for connection.</string>
    <string name="refresh_use_summary">Refresh O/S settings before connection.</string>

    <string name="initialize_settings">Initialize Settings</string>

    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="no_data">No data</string>

    <string name="connecting">Connecting&#8230;</string>
    <string name="processing">Processing&#8230;</string>
    <string name="basic_state">Basic State</string>
    <string name="detail_state">Detail State</string>
    <string name="bond_state">Bond State</string>
    <string name="acl_state">ACL State</string>
    <string name="gatt_state">GATT State</string>
    <string name="colon">:</string>

    <string name="btn_update">Update</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_loglevel">LogLevel</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete_log_file">Delete</string>
    <string name="btn_sendmail">Mail</string>
    <string name="save_failed">Failed to save the log file.</string>
    <string name="save_complete">The log file was saved.</string>
    <string name="delete_file_complete">Log files were deleted.</string>
    <string name="delete_file_failed">Failed to delete log files.</string>
    <string name="storage_permission_denied_message">You need permissions for storage.</string>

    <string name="unconnected">Unconnected</string>
    <string name="disconnected">Disconnected</string>
    <string name="registered">REGISTERD</string>

    <string name="gson_oss_name">Gson</string>
    <string name="nv_bluetooth_oss_name">nv-bluetooth</string>
</resources>
