<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"/>

    <item
        android:id="@+id/nav_user_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/profile" />

    <group android:id="@+id/user_menu">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/history"
            android:titleCondensed="" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_log"
            android:icon="@drawable/ic_developer_board_black_24dp"
            android:title="@string/log" />

        <item
            android:id="@+id/nav_scanner"
            android:icon="@drawable/ic_bluetooth_searching_black_24dp"
            android:title="@string/scanner" />

    </group>
</menu>
