<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <HorizontalScrollView
        android:id="@+id/llHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_update"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_clear"
                android:textSize="15sp" />

            <View
                android:id="@+id/Separator1"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="4dp"
                android:background="#cccccc" />

            <Button
                android:id="@+id/btnLogLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_loglevel"
                android:textSize="15sp" />

            <View
                android:id="@+id/Separator2"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="4dp"
                android:background="#cccccc" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_save"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnDeleteLogFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_delete_log_file"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnSendMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_sendmail"
                android:textSize="15sp" />

        </LinearLayout>
    </HorizontalScrollView>

    <ListView
        android:id="@id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llHeader"
        android:layout_weight="1"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:scrollbars="vertical"></ListView>

</RelativeLayout>
