<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <jp.co.ohq.blesampleomron.view.widget.SectionWithSubject
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:subject="DEVICE"
                app:divider_top="true"
                app:divider_bottom="false"
            />
            <jp.co.ohq.blesampleomron.view.widget.TwoLineTextViewWithoutImage
                android:id="@+id/device_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/guest_select_device"
            />
            <jp.co.ohq.blesampleomron.view.widget.SectionWithSubject
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:divider_bottom="true"
                />
            <jp.co.ohq.blesampleomron.view.widget.TwoLineTextViewWithoutImage
                android:id="@+id/change_normal_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/guest_change_normal_mode"
                />
            <jp.co.ohq.blesampleomron.view.widget.TwoLineTextViewWithoutImage
                android:id="@+id/change_unregistered_user_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/guest_change_unregistered_user_mode"
                />
            <jp.co.ohq.blesampleomron.view.widget.SectionWithSubject
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:divider_bottom="true"
                />
            <jp.co.ohq.blesampleomron.view.widget.TwoLineTextViewWithoutImage
                android:id="@+id/receive_measurement_records"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/guest_receive_measurement_records"
                app:summary="@string/guest_receive_summary"
                />
            <jp.co.ohq.blesampleomron.view.widget.SectionWithSubject
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:subject="PROFILE"
                app:divider_top="true"
                app:divider_bottom="false"
                />
            <include layout="@layout/fragment_user_profile" android:id="@+id/include_profile" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>