<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <jp.co.ohq.blesampleomron.view.widget.TwoLineTextViewWithoutImage
        android:id="@+id/date_of_birth_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/date_of_birth"
        />
    <jp.co.ohq.blesampleomron.view.widget.SectionWithSubject
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:divider_bottom="true"
        />
    <jp.co.ohq.blesampleomron.view.widget.TwoLineTextViewWithoutImage
        android:id="@+id/height_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/height"
        />
    <jp.co.ohq.blesampleomron.view.widget.SectionWithSubject
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:divider_bottom="true"
        />
    <jp.co.ohq.blesampleomron.view.widget.TwoLineTextViewWithoutImage
        android:id="@+id/gender_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/gender"
        />
    <jp.co.ohq.blesampleomron.view.widget.SectionWithSubject
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:divider_bottom="true"
        />
</LinearLayout>
